--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,22 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.xdty.media</groupId>
+          <artifactId>mediaplayer</artifactId>
+          <version>0.0.1</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>18-ea+2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>18</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
