--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Civilization</groupId>
   <artifactId>Civilization</artifactId>
@@ -94,12 +95,6 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>org.xdty.media</groupId>
-          <artifactId>mediaplayer</artifactId>
-          <version>0.0.1</version>
-          <scope>compile</scope>
-      </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-media</artifactId>
@@ -109,6 +104,11 @@
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-media</artifactId>
       <version>18</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jtransc</groupId>
+      <artifactId>jtransc-rt</artifactId>
+      <version>0.5.0-ALPHA4</version>
     </dependency>
   </dependencies>
   <build>
